tests/trybuild/floating_attributes.stderr
error: Expected an error definition to be next after attributes. You may have a dangling doc comment.
  --> tests/trybuild/floating_attributes.rs:13:5
   |
13 |     /// Doc
   |     ^^^^^^^
